--- a/moneyApp/Wydatki.xaml
+++ b/moneyApp/Wydatki.xaml
@@ -9,11 +9,86 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
-            <RowDefinition/>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
+
+        <Grid.Background  >
+            <LinearGradientBrush x:Name="Backgnd">
+                <GradientStop Offset="01" Color="Violet"></GradientStop>
+                <GradientStop Offset="0.3" Color="Red"></GradientStop>
+            </LinearGradientBrush>
+        </Grid.Background>
         <DockPanel  Grid.Row="0">
-            <Button  Content="Dodaj Wydatki" Click="Button_Click"  Width="400"></Button>
+            <Button  Content="Dodaj Wydatki" Click="Button_Click_1"  Width="400"></Button>
             <Button  Content="Lista Wydatków" Click="Button_Click" Width="400"></Button>
         </DockPanel>
+        <StackPanel Grid.Row="1">
+            <ComboBox x:Name="Mies" SelectionChanged="Mies_SelectionChanged">
+
+            </ComboBox>
+            
+            
+        </StackPanel>
+
+        <ScrollViewer HorizontalAlignment="Stretch" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" Grid.Row="2">
+
+
+            <StackPanel Grid.Row="2" Margin="10" HorizontalAlignment="Center">
+                <ListView  HorizontalAlignment = "Left" 
+         VerticalAlignment = "Top" Name="lista" >
+
+                    <ListView.View>
+
+                        <GridView>
+                            <GridViewColumn Header = "Kwota"  
+                  Width = "100" DisplayMemberBinding="{Binding Kwota}"/>
+
+                            <GridViewColumn Header = "Typ" 
+                  Width = "100"  DisplayMemberBinding="{Binding NazwaTransakcji}"/>
+
+                            <GridViewColumn Header = "Data"   DisplayMemberBinding="{Binding Data}"
+                  Width = "100"/>
+
+                            <GridViewColumn Header = "Rodzaj"   DisplayMemberBinding="{Binding  RodzajTransakcji}"
+                  Width = "100"/>
+
+                        </GridView>
+
+                    </ListView.View>
+
+
+                </ListView>
+
+             
+            </StackPanel>
+        </ScrollViewer>
+        <StackPanel Grid.Row="3" Margin="10" HorizontalAlignment="Center">
+            <ListView  HorizontalAlignment = "Left" 
+         VerticalAlignment = "Top" Name="pod" >
+
+                <ListView.View>
+
+                    <GridView>
+                        <GridViewColumn Header = "Przychod"  
+                   DisplayMemberBinding="{Binding Przychód }"/>
+
+                        <GridViewColumn Header = "Koszty" 
+                    DisplayMemberBinding="{Binding Koszty}"/>
+
+                        <GridViewColumn Header = "Podsumowanie"   DisplayMemberBinding="{Binding Podsumowanie}"
+                  />
+
+                   
+                    </GridView>
+
+                </ListView.View>
+
+
+            </ListView>
+
+
+        </StackPanel>
     </Grid>
 </Window>
